# infiniteloop

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  game_service.py  lobby_service.py  main.py  pyproject.toml
agents/: action_space.py  env.py  observation.py  reward.py  train.py
bot/: bot.py  bot_state.py
bot/handlers/: character.py  combat.py  exploration.py  game.py  onboarding.py
bot/logging/: bot_log.py
bot/tools/: character_renderer.py  combat_image.py  combat_renderer.py  exploration_renderer.py  keyboards.py  location_labels.py  run_persistence.py  save_flow.py  session_lookup.py
db/core/: crud_operations.py  pool.py
db/queries/: users_namespace.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.d.ts  app.html
game/character/: __init__.py  base_entity.py  enemy.py  flags.py  hero_upgrades.py  inventory.py  player_character.py  progression.py  skill_set.py  stats.py
game/combat/: __init__.py  action_resolver.py  cooldowns.py  damage.py  death.py  effect_targeting.py  effects.py  enemy_ai.py  engine.py  initiative.py  models.py  passives.py  skill_modifiers.py  skill_resolver.py  skill_targeting.py  summons.py  targeting.py  trackers.py  turn_manager.py
game/core/: __init__.py  data_loader.py  dice.py  enums.py  formula_eval.py  game_models.py  selection.py
game/events/: __init__.py  engine.py  models.py  outcomes.py
game/items/: dissolve.py  equipment_effects.py  items.py  (+1 more)
resources/: merger.py
server/: main.py
settings/: config.py
webapp/: __init__.py  auth.py  links.py  router.py  schemas.py
(+107 files in other folders)
