[project]
name = "infiniteloop"
version = "0.1.0"
description = "Roguelite RPG for Telegram"
authors = [
    {name = "Posthumanlight"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "aiogram (>=3.26.0,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-json-logger (>=4.1.0,<5.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "pillow (>=12.2.0,<13.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
